zokrates_cli/examples/compile_errors/variable_exponent_in_pow.zok
def main(field a, u32 b) -> field {
    return a**b;
}